<resources>
    <string name="app">너만을 위한 가계부</string>
    <string name="app_name">AccountBook</string>
    <string name="login">로그인</string>
    <string name="menu01">메인 달력</string>
    <string name="menu02">조회하기</string>
    <string name="menu03">마이페이지</string>
    <string name="menu04">카테고리 설정</string>
    <string name="menu05">광고 보기 (제발!)</string>
    <string name="tool_menu01">월 마감</string>
    <string name="tool_menu02">계좌 이체</string>
    <string name="tool_menu03">이체 내역</string>
    <string name="logout">로그아웃</string>
    <string name="totalSpending">총 지출</string>
    <string name="totalIncome">총 수입</string>
    <string name="code">코드</string>
    <string name="criteria">기준</string>
    <string name="contents">내용</string>
    <string name="payDay">결제일</string>
    <string name="category">카테고리</string>
    <string name="backInput">계좌등록</string>
    <string name="save">저장</string>
    <string name="newInput">새로 입력</string>
    <string name="menuSetting">메뉴 설정</string>
    <string name="reset">내용 초기화</string>
    <string name="pwChange">비밀번호 변경</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>
    <string name="nickname">닉네임</string>
    <string name="income">수입</string>
    <string name="spending">지출</string>
    <string name="bank">계좌</string>
    <string name="won">원</string>
    <string name="money">금액</string>
    <string name="memo">메모</string>
    <string name="date">날짜</string>
    <string name="bank_income">입금 계좌</string>
    <string name="bank_expanding">출금 계좌</string>
    <string name="zero">0</string>
    <string name="checkDelete">선택 삭제</string>
    <string name="balanceMoney">잔액</string>
    <string name="use">사용</string>
    <string name="unUse">미사용</string>
    <string name="refresh">새로고침</string>
    <string name="semiCategory01">고정비</string>
    <string name="semiCategory02">변동비</string>
    <string name="semiCategory03">준변동비</string>
    <string name="register">등록하기</string>
    <string name="bankAndCard">계좌/카드</string>
    <string name="endDay">사용 종료 일자</string>
    <string name="arrow">→</string>
    <string name="modify">수정</string>
    <string name="autoLogin">자동 로그인</string>
    <string name="saveId">아이디 저장</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="phone">연락처</string>
    <string name="codeSend">인증코드 요청</string>
    <string name="reSend">재전송 요청</string>
    <string name="signup">회원가입</string>
    <string name="authentication_number">인증번호</string>
    <string name="duplication_check">중복 확인</string>
    <string name="birth">생년월일</string>
    <string name="answer">질문</string>
    <string name="complete">완료</string>
    <string name="clear">초기화</string>



    <string name="text01">※ 둘 중 하나 선택</string>
    <string name="text02">새로운 닉네임을 입력해주세요.</string>
    <string name="text03">닉네임 바꾸기</string>
    <string name="text04">오늘 날짜로 이동</string>
    <string name="text05">새로운 비밀번호</string>
    <string name="text06">다시 한 번</string>
    <string name="text07">※ 8자리 이상 영어, 숫자, 특수문자 포함</string>
    <string name="text08">일치하지 않습니다.</string>
    <string name="text09">일치합니다.</string>
    <string name="text10">비밀번호를 입력해주세요.</string>
    <string name="text11">이체할 금액을 입력해주세요.</string>
    <string name="text12">지출 중분류 사용 여부</string>
    <string name="text13">아이디를 입력해주세요.</string>
    <string name="text14">※ 계좌/카드는 설정화면에서 설정 가능</string>
    <string name="text15">(빈칸 가능)</string>
    <string name="text16">금액을 입력해주세요.</string>
    <string name="text17">메모할 내용을 입력해주세요.</string>
    <string name="text18">※ 해당 목록은 카테고리 설정에서 변경할 수 있습니다.</string>
    <string name="text19">정보를 잊어버렸나요?</string>
    <string name="text20">회원가입 하기</string>
    <string name="text21">회원정보 찾기</string>
    <string name="text22">사용 불가능한 아이디입니다.</string>
    <string name="text23">사용 가능한 아이디입니다.</string>
    <string name="text24">개인정보 제공에 동의합니다.</string>
    <string name="text25">자세히 보기</string>
    <string name="text26">초 이내에 인증을 해주시기 바랍니다.</string>
    <string name="text27">시간이 초과되었습니다. 다시 시도해주시기 바랍니다.</string>
    <string name="text29">아이디 찾기</string>
    <string name="text30">[ 졸업한 초등학교는 어디인가요? ]</string>
    <string name="text31">ex) 960302</string>
    <string name="text32">순서 수정하기</string>
    <string name="text33">항목을 길게 누른 상태에서 이동하여 순서를 수정하세요.</string>
    <string name="text28">본인은 귀사에 이력서를 제출함에 따라 [개인정보 보호법] 제15조 및 제17조에 따라 아래의 내용으로 개인정보를 수집, 이용 및 제공하는데 동의합니다.\n
\n\n□ 개인정보의 수집 및 이용에 관한 사항
 \n\t- 수집하는 개인정보 항목 (이력서 양식 내용 일체) : 성명, 전화번호, 등 그 外 이력서 기재 내용 일체
 \n\t- 개인정보의 이용 목적 : 수집된 개인정보를 사업장 신규 채용 서류 심사 및 인사서류로 활용하며, 목적 외의 용도로는 사용하지 않습니다.\n
\n\n□ 개인정보의 보관 및 이용 기간
 \n\t- 귀하의 개인정보를 다음과 같이 보관하며, 수집, 이용 및 제공목적이 달성된 경우 [개인정보 보호법] 제21조에 따라 처리합니다.</string>

</resources>