<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/popupIo_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_rectangle02"
        tools:context="development.app.accountbook.activity.Popup_InputOutput">

        <TextView
            android:id="@+id/popupIo_titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingVertical="10dp"
            android:text="@string/register"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/light_blue02"/>

        <TextView
            android:id="@+id/popupIo_textTv01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/text14"
            android:textSize="14sp"
            android:textColor="@color/gray01"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/popupIo_textTv02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/text15"
            android:textSize="14sp"
            android:textColor="@color/gray01"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/popupIo_ContentsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/popupIo_spinnerCategory"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/popupIo_textTv03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bankAndCard"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/popupIo_spinner"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/popupIo_moneyEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rectangle"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:inputType="number"
            android:hint="@string/text16"
            android:textColorHint="@color/gray01"
            android:text="@string/zero"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:maxLength="20"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/popupIo_memoEt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="top"
            android:padding="10dp"
            android:background="@drawable/background_rectangle"
            android:inputType="text"
            android:hint="@string/text17"
            android:textColorHint="@color/gray01"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:maxLength="60"
            android:importantForAutofill="no" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupIo_modifyBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/modify"
                android:textColor="@color/white"
                android:background="@drawable/btn_click01"
                android:visibility="gone" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupIo_okBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="@color/white"
                android:background="@drawable/btn_click01"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupIo_closeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:background="@drawable/btn_click01"/>
        </LinearLayout>

    </LinearLayout>

</layout>