<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_rectangle02"
        tools:context="development.app.accountbook.activity.Popup_Transfer">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/tool_menu02"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:background="@color/light_blue02"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupTransfer_listBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/background_rectangle"
                android:text="@string/tool_menu03" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/popupTransfer_dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/background_rectangle"
                android:textColor="@color/black"
                android:textSize="17sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupTransfer_infoBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_click01"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bank_expanding"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/popupTransfer_spinnerExpanding"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bank_income"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/popupTransfer_spinnerIncome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/spinner_frame01"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/money"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupTransfer_moneyEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_rectangle"
            android:text="@string/zero"
            android:textAlignment="center"
            android:hint="@string/text11"
            android:nextFocusDown="@id/popupTransfer_memoEt"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="20"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray01"
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/memo"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popupTransfer_memoEt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="top"
            android:background="@drawable/background_rectangle"
            android:hint="@string/text17"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLength="100"
            android:scrollHorizontally="true"
            android:scrollbars="vertical"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray01"
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupTransfer_okBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:background="@drawable/btn_click01"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/popupTransfer_closeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close"
                android:textColor="@color/white"
                android:background="@drawable/btn_click01"/>
        </LinearLayout>

    </LinearLayout>
</layout>